--- a/RecyclerViewsPractice/app/src/main/AndroidManifest.xml
+++ b/RecyclerViewsPractice/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RecyclerViewsPractice">
         <activity
+            android:name=".card.cardActivity"
+            android:exported="true" />
+        <activity
             android:name=".NormalRecyclerViewPackage.NormalRecycleActivity"
             android:exported="true" />
         <activity
