--- a/RecyclerViewsPractice/app/build.gradle
+++ b/RecyclerViewsPractice/app/build.gradle
@@ -35,4 +35,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //swipe revel layout git hub library
+    implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
 }
